añadir la funcionalidad de peleas y peleadores favoritos